2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.OptionPanels/KeyBindingsPanel.cs,
	  options/KeyBindingSchemeEmacs.xml,
	  options/KeyBindingSchemeVisualStudio.xml,
	  options/KeyBindingSchemeDefault.xml, MonoDevelop.Ide.addin.xml,
	  MonoDevelop.Ide.mdp, Makefile.am, MonoDevelop.Ide.Gui/Ide.cs: Load key
	  bindings from an extension point. Moved key bindings files from
	  MD.Components to here.

2007-08-08  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* MonoDevelop.Ide.Gui.Dialogs/ReplaceInFilesDialog.cs, 
	  MonoDevelop.Ide.Gui.Dialogs/ReplaceDialog.cs, 
	  gtk-gui/gui.stetic: Change Entry for Find/Replace dialogs to ComboBoxEntry. 

2007-08-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Dialogs/RenameItemDialog.cs, gtk-gui/gui.stetic,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.RenameItemDialog.cs: When perform
	  refactoring Rename on public class add posibility to rename file that
	  contains this class (interface). Patch by Sergey Shebanin.

2007-08-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/SearchResultPad.cs: Make the search results list
	  sortable. Fixes bug #82375.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.OptionPanels/KeyBindingsPanel.cs,
	  MonoDevelop.Ide.addin.xml, MonoDevelop.Ide.Gui/Workbench.cs,
	  MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs, MonoDevelop.Ide.Gui/Ide.cs:
	  Removed the CommandService class. Everything is done directly with
	  CommandManager. Moved all extension node types to MD.Components.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Dialogs/NewProjectDialog.cs, gtk-gui/gui.stetic,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewProjectDialog.cs: The folder
	  entry in the new project dialog can now be loaded by stetic, no need to
	  create it from code.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Templates/FileTemplate.cs,