@@ -1,3 +1,9 @@
+2007-08-14  Ankit Jain  <jankit@novell.com>
+
+	Fix bug #82280.
+	* MonoDevelop.Ide.Gui.Pads/SearchResultPad.cs: Add context menu with
+	Open, Copy and SelectAll commands.
+
 2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Ide.Gui.OptionPanels/KeyBindingsPanel.cs,
